<resources>
    <string name="app_name">Intelligent Water</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="action_settings">Settings</string>

    <string name="waterLevel">水位</string>
    <string name="waterFlow">流量</string>
    <string name="waterQuality">水质</string>
    <string name="waterForce">水动力</string>
    <string name="floatingMaterial">漂浮物</string>
    <string name="unmannedShip">无人船</string>
    
    <string name="standardMap">标准图</string>
    <string name="satelliteMap">卫星图</string>
    <string name="pleaseInputStationName">请输入站点名称...</string>

    <string name="map">地图</string>
    <string name="stationName">站点名称：</string>
    <string name="currentWaterLevel">当前水位：</string>
    <string name="historicalWaterLevel">历史水位：</string>
    <string name="photoBy">拍摄于：</string>

    <string name="MORE">MORE</string>
    <string name="title_activity_water_level">WaterLevelActivity</string>

    <!-- 实时变为一周内 按天变成一月内 按月变成三月内  -->
    <string name="realTime">一周内</string>
    <string name="dayDecided">一月内</string>
    <string name="monthDecided">三月内</string>

    <string name="temperature">温度</string>
    <string name="conductivity">电导率</string>
    <string name="ph">PH值</string>
    <string name="dissolvedOxygen">溶解氧</string>
    <string name="redox">氧化还原</string>
    <string name="turbidity">浊度</string>
    <string name="transparency">透明度</string>
    <string name="NH3">氨氮</string>

    <string name="pleaseInputUserName">请输入用户名</string>
    <string name="pleaseInputPassword">请输入密码</string>
    <string name="pleaseInputCorrectUserName">请输入正确的用户名</string>
    <string name="pleaseInputCorrectPassword">请输入正确的密码</string>

    <string name="login">登  录</string>
    <string name="exitCurrentAccount">退出当前账号</string>
    <string name="intellgenceWater">INTELLGENCE WATER</string>

</resources>
