<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_waterLevel"
            android:icon="@drawable/ic_location"
            android:title="@string/waterLevel" />
        <item
            android:id="@+id/nav_waterForce"
            android:icon="@drawable/ic_location"
            android:title="@string/waterForce" />
        <item
            android:id="@+id/nav_waterQuality"
            android:icon="@drawable/ic_location"
            android:title="@string/waterQuality" />
        <item
            android:id="@+id/nav_floatingMaterial"
            android:icon="@drawable/ic_location"
            android:title="@string/floatingMaterial" />

        <item
            android:id="@+id/nav_unmannedShip"
            android:icon="@drawable/ic_location"
            android:title="@string/unmannedShip" />
    </group>

</menu>
