<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/contentFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left">

        <LinearLayout
            android:id="@+id/userInfo_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingTop="30dp"
            android:background="@color/skyBlue"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/avatar_iv"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_avatar"/>

            <TextView
                android:id="@+id/username_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:textSize="16sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/userInfo_layout"
            android:layout_above="@id/exit_layout"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/waterLevel_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_water_level"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/waterLevel"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/waterQuality_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_water_quality"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/waterQuality"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/floating_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_floating"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/floatingMaterial"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/boat_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_boat"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/unmannedShip"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/waterForce_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_location"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/waterForce"/>

            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:id="@+id/exit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:paddingBottom="20dp"
            android:background="@color/white"
            android:gravity="center">

            <ImageView
                android:id="@+id/exit_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_exit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/exit_iv"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/exitCurrentAccount"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"/>

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
