<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_blue_radius_corner"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <EditText
        android:id="@+id/userName_et"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_white_frame"
        android:hint="@string/pleaseInputUserName"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/password_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_tv"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_white_frame"
        android:hint="@string/pleaseInputPassword"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/intellgenceWater"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/userName_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/userNameHint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/userName_et"
        app:layout_constraintTop_toBottomOf="@id/userName_et"
        app:layout_constraintBottom_toTopOf="@id/password_et">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_warning"/>

        <TextView
            android:id="@+id/userNameHint_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="12sp"
            android:textColor="@color/lightRed" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordHint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/password_et"
        app:layout_constraintTop_toBottomOf="@id/password_et"
        app:layout_constraintBottom_toTopOf="@id/login_tv">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_warning"/>

        <TextView
            android:id="@+id/passwordHint_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="12sp"
            android:textColor="@color/lightRed" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
